--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
   },
   "homepage": "https://github.com/mschreiber68/mysite#readme",
   "devDependencies": {
-    "sass": "^1.48.0"
-  }
+    "autoprefixer": "^10.4.2",
+    "cssnano": "^5.0.15",
+    "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
+    "sass": "^1.49.0"
+  },
+  "browserslist": [
+    "> 2%"
+  ]
 }
